[project]
name = "RIXA"
version = "0.1.0.dev3"
authors = [
  { name="Finn Schwall", email="finn.schwall@isob.fraunhofer.de" },
]
description = "Plugin system for distributed computing inside a webserver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp==3.8.4",
    "asgiref==3.6.0",
    "channels",
    "Django",
    "user_agents==2.2.0",
    "django-bootstrap-v5",
    "django-rosetta",
    "plotly",
    "daphne",
    "jsonfield",
#    "click~=8.1.3",
    "python-decouple",
    "pandas",
    "psutil"
]

#doc = [
#    "python3-sphinx",
#    "sphinxawesome-theme",
#    "sphinxcontrib-mermaid",
#    "myst-parser"
#]




[project.urls]
"Homepage" = "https://github.com/finnschwall/RIXA"
#
#[tools.setuptools]
#packages = ["rixawebserver", "rixawebserver.plugins"]

#[tool.setuptools.packages.find]
#
#exclude = ["docs", "dashboard", "static"]

#[tool.setuptools]
#package-dir = {""=""}

[tool.setuptools.package-dir]
rixa = ""
#"rixa.plugins" = "plugins"
"rixa.rixaserver" = "rixaserver"

[project.scripts]
#rixaserver = "rixawebserver.rixaserver:launch"
rixaserver = "rixa.rixaserver:launch"

#[tool.poetry.package]
#include = ["/static/**", "/dashboard/templates/**", "/dashboard/static/**", "/plugins/example_wd/**"]

#[tool.setuptools.packages.find]
#where = ["static", "account_managment", "dashboard"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"